--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 ---
-layout: default
-title: 我的Blog
+layout:default
+title:我的Blog
+domain:achris
 ---
 <h2>{{ page.title }}</h2>
 <p>最新文章</p>
 <ul>
 {% for post in site.posts %}
-<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{domain}}{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 </ul>
